Use UserInfoExtractor for PubSub message (#718)